--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a class="logo-link" href="#" title="GeoIndustry@ACM SIGSPATIAL 2023" itemprop="name">GeoIndustry@ACM SIGSPATIAL 2023</a>
     </h1>
     
-    <h2 class="tagline">Hamburg, Germany</h2>
+    <h2 class="tagline">Monday November 13, 2023, Hamburg, Germany</h2>
 
 
     <div class="call-action-area">
