add date to header.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="International Workshop on Spatial Big Data and AI for Industrial Applications@ACM SIGSPATIAL 2023" />
 <meta property="og:description" content="International Workshop on Spatial Big Data and AI for Industrial Applications@ACM SIGSPATIAL 2023" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://geoindustry.github.io/geoindustry_2023.github.io/" /><meta property="og:image" content="https://geoindustry.github.io/img/logo.png"/>
+<meta property="og:url" content="https://geoindustry.github.io/geoindustryworkshop2023/" /><meta property="og:image" content="https://geoindustry.github.io/img/logo.png"/>
 
 
   <meta name="twitter:card" content="summary_large_image"/>
@@ -23,10 +23,10 @@
 <meta name="twitter:description" content="International Workshop on Spatial Big Data and AI for Industrial Applications@ACM SIGSPATIAL 2023"/>
 
 
-  <link rel="shortcut icon" href="https://geoindustry.github.io/geoindustry_2023.github.io/img/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="https://geoindustry.github.io/geoindustry_2023.github.io/img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="https://geoindustry.github.io/geoindustryworkshop2023/img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="https://geoindustry.github.io/geoindustryworkshop2023/img/apple-touch-icon.png">
 
-  <link rel="stylesheet" type="text/css" href="https://geoindustry.github.io/geoindustry_2023.github.io/css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://geoindustry.github.io/geoindustryworkshop2023/css/main.css">
   <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
 </head>
@@ -93,7 +93,7 @@
       <div class="wrapper">
         
           <section class="intro" id="intro">
-            <h2 class="section-title"><img src="https://geoindustry.github.io/geoindustry_2023.github.io/images/acmsigspatial-full.png" height="100px"> About</h2>
+            <h2 class="section-title"><img src="https://geoindustry.github.io/geoindustryworkshop2023/images/acmsigspatial-full.png" height="100px"> About</h2>
 <p itemprop="description">With the rapid revolution and increasing availability of geospatial data, not only academia but also industry aspire for solutions to further leverage the big data and AI technologies to create new products, improve efficiencies and provide novel solutions to existing problems. However, despite the widespread interest, there is a lack of communication between the researchers in academia and industry, limiting advancements at the intersection. Academia often has limited access to the rich and potentially useful big geospatial datasets and related real problems. In addition, the solutions proposed by the academic researchers alone are usually developed for small scale with many assumptions, leaving a less-attended gap between methods and their applicability at scale for industrial applications. On the other hand, industry has the data and problems at scale. However, since existing research is often not on par, industry researchers may lean towards using the traditional approaches that are developed without spatial consideration (e.g., ignoring spatial and temporal dependencies), and project teams have limited time and efforts to dive deep on the development of novel techniques that can be high-risk but high-potential. This opens up opportunities for synergistic collaboration between industrial practitioners and academic researchers. The 2nd ACM SIGSPATIAL International Workshop on Spatial Big Data and AI for Industrial Applications (GeoIndustry 2023) is to offer a forum to exchange thoughts and ideas between industry and academia and reduce the siloed efforts. At the same time, the collaborations, via invited and regular talks, can not only accelerate the research-to-impact cycle, but also foster workforce development for future geospatial researchers. </p>
 
           </section>
@@ -224,7 +224,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="https://geoindustry.github.io/geoindustry_2023.github.io/js/jquery.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="https://geoindustry.github.io/geoindustryworkshop2023/js/jquery.js"><\/script>')</script>
   
   
 </body>
