update submission link.

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 
 
 
-<p itemprop="description"></p>
+<p itemprop="description">November 13, 2023</p>
 
 <h5>Submission site</h5>
 
-<p itemprop="description"><a href=https://easychair.org/my/conference?conf&#61;geoindustry23>https://easychair.org/my/conference?conf=geoindustry23</a></p>
+<p itemprop="description"><a href=https://easychair.org/conferences/?conf&#61;geoindustry2023>https://easychair.org/conferences/?conf=geoindustry2023</a></p>
           </section>
         
 
