Update schedule and PC.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   
     <tr></tr>
   
-  <td class="tg-r3w3">Hongxu Ma (Google X)</td>
+  <td class="tg-r3w3">Hongxu Ma (Mineral Earth Sciences)</td>
   
     
   
